# aimux

./: .claudeignore  .dockerignore  .env  .eslintrc.js  .gitignore  AIMUX2.1-todo.md  ANTHROPIC_JSON_TOOLUSE_FIX_REPORT.md  API_DOCUMENTATION.md  AUDIT_COMPARISON_2025-11-24.md  Audit-2.1.md  CHANGELOG.md  CLAUDE.md  CLAUDE_GATEWAY_V3_README.md  CMakeLists.txt  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  COMPREHENSIVE_QA_REPORT.md  CONFIGURATION_EXAMPLES.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.interactive  Dockerfile.test  Doxyfile  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_SUMMARY.txt  PHASE2_COMPLETION_REPORT.md  PHASE3_SECURITY_ENHANCEMENTS.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_REMEDIATION_REPORT.md  PHASE4_STATUS.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_COMPLETION.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  PROVIDER_INTEGRATION_REPORT.md  README.md  (+99 more)
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/include/: version.h
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_validation/: CMakeCache.txt  Makefile  cmake_install.cmake  memory_performance_test  provider_integration_tests  test_dashboard
build_validation/include/: version.h
codedocs/: IMPLEMENTATION_VERIFICATION.md  LATEST_CODE_REFERENCES.md  README.md  api.toon  architecture.toon  build.toon  components.toon  configuration.toon  performance.toon  providers.toon  security.toon  tui_system.toon  version_2.1_status.toon
config/: default.json  production.env
docs/: API.md  CONFIGURATION_REFERENCE.md  DEPLOYMENT_GUIDE.md  Makefile  README_DOCUMENTATION.md  TROUBLESHOOTING.md  api-analysis.md  architecture.puml  configuration.md  data_flow.puml  deployment.md  logging_examples.md  performance_monitoring_guide.md  testing.md
examples/: logging_example.cpp  validation_example.cpp
include/: version.h.in
include/config/: production_config.h
include/logging/: production_logger.h
include/monitoring/: metrics.h
include/network/: tls_config.h
native/: README.md
qa/: README.md  aimux-qa-pass1-todo.md  architecture_compliance_tests.md  build_integration_tests.md  build_resolution.sh  build_test.sh  fix_tests.sh  installation_test.sh  memory_safety_tests.md  performance_regression_tests.md  performance_test.sh  phase1_foundation_qa_plan.md  phase2_core_plugins_qa_plan.md  phase3_distribution_qa_plan.md  phase4_advanced_qa_plan.md  procedures.md  qa_pass1_completion.sh  qa_plan.md  qa_process_improvement.md  qa_todo.md  quality_prevention_framework.md  regression_plan.md  run_all_qa.sh  run_smoke_tests.sh  security_regression_tests.md  security_test.sh  test_config_hotreload.sh  test_env_overrides.sh  test_plan.md  test_prettifier_config.cpp  test_prettifier_config.sh  test_router_prettifier.sh  test_webui_prettifier_api.sh  thread_safety_tests.md  v20-todo-review.md  validate_tests.sh
qa/results/: master_qa_20251112_180914.json  master_qa_20251112_181845.json
scripts/: build_production.sh  deploy.sh  install_service.sh  manage_service.sh  provider-test.sh  quick-test.sh  run_tests_with_coverage.sh  setup-docker-env.sh  test-docker.sh  test_production_deployment.sh  ultra-safe-commit.sh  view-logs.sh
src/: claude_gateway_main.cpp  index.ts  main.cpp
src/ab_testing/: ab_testing_framework.cpp
src/api/: client.ts
src/cache/: response_cache.cpp
src/cli/: batch_operations.cpp  cli_main.cpp  cli_utils.cpp  command_dispatcher.cpp  commands.ts  index.ts  interactive_installation.cpp  migrate.cpp  plugin_cli.cpp
src/config/: global_config.cpp  index.ts  manager.ts  production_config.cpp  simple_config.cpp  startup_validator.cpp  toon_parser.cpp  types.ts  utils.ts
src/core/: aimux-app.ts  api_initializer.cpp  app.ts  bridge.cpp  error_bridge.cpp  error_handler.cpp  failover-manager.ts  failover.cpp  index.ts  model_registry.cpp  router.cpp  routing-engine.ts  routing-utils.ts  thread_manager.cpp
src/daemon/: daemon.cpp
src/distribution/: github_registry.cpp  plugin_downloader.cpp  version_resolver.cpp
src/gateway/: api_transformer.cpp  claude_gateway.cpp  format_detector.cpp  gateway_manager.cpp  provider_health.cpp  routing_logic.cpp  v3_unified_gateway.cpp
src/interceptors/: zai-interceptor.js  zai-interceptor.ts
src/launcher/: claude-launcher.ts  index.ts
src/logging/: correlation_context.cpp  logger.cpp  production_logger.cpp
src/metrics/: time_series_db.cpp  (+2 more)
test/: ab_testing_framework_test.cpp  anthropic_formatter_test.cpp  anthropic_model_query_test.cpp  api_initializer_test.cpp  cerebras_formatter_test.cpp  cerebras_model_query_test.cpp  cli_security_test.cpp  cli_test.cpp  github_registry_test.cpp  live_api_dynamic_models_test.cpp  live_api_integration_test.cpp  main_startup_integration_test.cpp  memory_safety_test.cpp  metrics_collector_test.cpp  model_registry_test.cpp  openai_formatter_test.cpp  openai_model_query_test.cpp  phase2_integration_test.cpp  phase3_integration_test.cpp  phase3_qa_summary.md  phase3_qa_validation_summary.md  plugin_downloader_test.cpp  prettifier_config_test.cpp  prettifier_plugin_test.cpp  real_provider_api_integration_test.cpp  security_regression_test.cpp  security_test.cpp  streaming_processor_sync_test.cpp  streaming_processor_test.cpp  synthetic_formatter_test.cpp  thread_safety_test.cpp  toon_formatter_test.cpp  v2_2_config_validator_test.cpp  v2_2_crow_integration_test.cpp  v2_2_frontend_css_test.cpp  v2_2_html_structure_test.cpp  v2_2_javascript_api_test.cpp  v2_2_logging_test.cpp  v2_2_prettifier_api_test.cpp  v2_2_ui_controller_test.cpp  (+2 more)
test-config/: aimux-config.json
test-data/: test-prompt.txt  thinking-test.txt
test_cmake/: CMakeLists.txt  crow_test.cpp
tests/: README.md  api_transformation_tests.cpp  config.test.ts  coverage_report_generator.cpp  format_detection_tests.cpp  gateway_integration_tests.cpp  integration.test.ts  provider_compatibility_tests.cpp  providers.test.ts  router.test.ts  test_runner.cpp  utils.test.ts
webui/: index.html
(+160 files in other folders)
